# pyvista-geojson

./: .gitignore  README.md  pyproject.toml
examples/: 3d_visualization.py  README.md  basic_usage.py  filtering_example.py  geometry_types.py  jupyter_example.ipynb  jupyter_example.py
examples/data/: lines.geojson  mixed_geometries.geojson  points.geojson  polygons.geojson
src/pyvista_geojson/: __init__.py  reader.py
