[project]
name = "pyvista-geojson"
version = "0.1.0"
description = "A library for reading and visualizing GeoJSON files with PyVista"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyvista>=0.40.0",
    "numpy>=1.20.0",
    "jupyterlab",
    "jupytext>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvista_geojson"]
